@startuml
hide empty members

' Definição das classes
class Usuario {
    # nome: String
    # telefone: String
    # email: String
}

class Cliente {
    - endereco: String
}
class Prestador {
    - especialidades: List<String>
}

class Servico {
    - descricao: String
    - dataDeAgendamento: Datetime
}

' Definição dos relacionamentos
Usuario <|-- Cliente
Usuario <|-- Prestador

Cliente "1" -- "0..*" Servico : "Contrata"
Prestador "1" -- "0..*" Servico : "Realiza"
@enduml